--- a/home.html
+++ b/home.html
@@ -46,6 +46,7 @@
 	</script>
 </head>
 <body>
+	<h1>BUBBLES</h1>
 	<div class="" style="background:#8BFF31;height:35px;margin:3px;">	
 			<h2>PracticalJavaScript 3 ----   <span style="font-size:15px;">Click OUtside</span></h2>	
 	</div><br><br>
